# serializer version: 1
# name: test_base_format_validators[question__format_validators1--True-text]
  dict({
    'saveDocumentStringAnswer': dict({
      'answer': dict({
        'stringValue': '',
      }),
      'clientMutationId': 'testid',
    }),
  })
# ---
# name: test_base_format_validators[question__format_validators1--True-textarea]
  dict({
    'saveDocumentStringAnswer': dict({
      'answer': dict({
        'stringValue': '',
      }),
      'clientMutationId': 'testid',
    }),
  })
# ---
# name: test_base_format_validators[question__format_validators2-test@example.com-True-text]
  dict({
    'saveDocumentStringAnswer': dict({
      'answer': dict({
        'stringValue': 'test@example.com',
      }),
      'clientMutationId': 'testid',
    }),
  })
# ---
# name: test_base_format_validators[question__format_validators2-test@example.com-True-textarea]
  dict({
    'saveDocumentStringAnswer': dict({
      'answer': dict({
        'stringValue': 'test@example.com',
      }),
      'clientMutationId': 'testid',
    }),
  })
# ---
# name: test_base_format_validators[question__format_validators4-+411234567890-True-text]
  dict({
    'saveDocumentStringAnswer': dict({
      'answer': dict({
        'stringValue': '+411234567890',
      }),
      'clientMutationId': 'testid',
    }),
  })
# ---
# name: test_base_format_validators[question__format_validators4-+411234567890-True-textarea]
  dict({
    'saveDocumentStringAnswer': dict({
      'answer': dict({
        'stringValue': '+411234567890',
      }),
      'clientMutationId': 'testid',
    }),
  })
# ---
# name: test_fetch_format_validators
  dict({
    'allFormatValidators': dict({
      'edges': list([
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'test name english',
            'regex': '(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)',
            'slug': 'test-validator',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'date',
            ]),
            'name': 'my date validator',
            'regex': None,
            'slug': 'my-date-validator',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'E-mail address',
            'regex': '(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)',
            'slug': 'email',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'Phone number',
            'regex': '^[\\s\\/\\.\\(\\)-]*(?:\\+|0|00)(?:[\\s\\/\\.\\(\\)-]*\\d[\\s\\/\\.\\(\\)-]*){6,20}$',
            'slug': 'phone-number',
          }),
        }),
      ]),
      'pageInfo': dict({
        'endCursor': 'YXJyYXljb25uZWN0aW9uOjM=',
        'startCursor': 'YXJyYXljb25uZWN0aW9uOjA=',
      }),
      'totalCount': 4,
    }),
  })
# ---
# name: test_fetch_format_validators.1
  dict({
    'allFormatValidators': dict({
      'edges': list([
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'test name deutsch',
            'regex': '(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)',
            'slug': 'test-validator',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'date',
            ]),
            'name': 'my date validator',
            'regex': None,
            'slug': 'my-date-validator',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'E-Mail Adresse',
            'regex': '(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)',
            'slug': 'email',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'Telefonnummer',
            'regex': '^[\\s\\/\\.\\(\\)-]*(?:\\+|0|00)(?:[\\s\\/\\.\\(\\)-]*\\d[\\s\\/\\.\\(\\)-]*){6,20}$',
            'slug': 'phone-number',
          }),
        }),
      ]),
      'pageInfo': dict({
        'endCursor': 'YXJyYXljb25uZWN0aW9uOjM=',
        'startCursor': 'YXJyYXljb25uZWN0aW9uOjA=',
      }),
      'totalCount': 4,
    }),
  })
# ---
# name: test_fetch_format_validators.2
  dict({
    'allFormatValidators': dict({
      'edges': list([
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'test name english',
            'regex': '(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)',
            'slug': 'test-validator',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'date',
            ]),
            'name': 'my date validator',
            'regex': None,
            'slug': 'my-date-validator',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'Adresse e-mail',
            'regex': '(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)',
            'slug': 'email',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'Numéro de téléphone',
            'regex': '^[\\s\\/\\.\\(\\)-]*(?:\\+|0|00)(?:[\\s\\/\\.\\(\\)-]*\\d[\\s\\/\\.\\(\\)-]*){6,20}$',
            'slug': 'phone-number',
          }),
        }),
      ]),
      'pageInfo': dict({
        'endCursor': 'YXJyYXljb25uZWN0aW9uOjM=',
        'startCursor': 'YXJyYXljb25uZWN0aW9uOjA=',
      }),
      'totalCount': 4,
    }),
  })
# ---
# name: test_fetch_format_validators.3
  dict({
    'allFormatValidators': dict({
      'edges': list([
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'test name english',
            'regex': '(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)',
            'slug': 'test-validator',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'date',
            ]),
            'name': 'my date validator',
            'regex': None,
            'slug': 'my-date-validator',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'E-mail address',
            'regex': '(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)',
            'slug': 'email',
          }),
        }),
        dict({
          'node': dict({
            'allowedQuestionTypes': list([
              'text',
              'textarea',
            ]),
            'name': 'Phone number',
            'regex': '^[\\s\\/\\.\\(\\)-]*(?:\\+|0|00)(?:[\\s\\/\\.\\(\\)-]*\\d[\\s\\/\\.\\(\\)-]*){6,20}$',
            'slug': 'phone-number',
          }),
        }),
      ]),
      'pageInfo': dict({
        'endCursor': 'YXJyYXljb25uZWN0aW9uOjM=',
        'startCursor': 'YXJyYXljb25uZWN0aW9uOjA=',
      }),
      'totalCount': 4,
    }),
  })
# ---
